--- a/OneDrive/Desktop/react-ai-tool/package.json
+++ b/OneDrive/Desktop/react-ai-tool/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-built": "vite build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -15,7 +16,7 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^8.0.6",
     "react-syntax-highlighter": "^16.1.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17","vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -25,7 +26,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.2"
+    "globals": "^16.5.0"
+    
   }
 }
